# Efficient-Disk-Learned-Index

./: .gitignore  .gitmodules  CMakeLists.txt  PrepareYCSB.sh  README.md  RunMultiThreadedYCSB.sh  RunOnMultiDisk.sh  RunOnSingleDisk.sh  RunYCSBOnMultiDisk.sh  RunYCSBOnSingleDisk.sh  gen_ycsb_workloads.cpp  key_type.h  run_microbenchmark.cpp  run_multi_threaded_ycsb.cpp  run_ycsb_experiments.cpp
GRE_datasets/: synthetic.sh
experiments/: benchmark.h  macro.h  structures.h  test_disk.h  util.h  util_compression.h  util_lid.h  util_same_block_size.h  util_search.h
indexes/: DI-v1.h  DI-v3.h  DI-v4.h  base_index.h  binary-search.h  compressed-pgm-index.h  index.h  leco-page.h  leco-zonemap.h  pgm-index-disk-pg.h  pgm-index-disk.h  pgm-index.h  rs-disk-oriented.h  rs-disk-pg.h  rs-disk.h
indexes/Compressed-Disk-Oriented-Index/: base.h  di_v1.h  di_v3.h  di_v4.h
indexes/PGM-index-disk/: pgm_index_page.hpp  pgm_index_variants.hpp  piecewise_linear_model.hpp
indexes/baseline/: alex-disk.h  btree-disk.h  btree-hai.h  btree-mt-disk.h  film.h  fiting-tree-disk.h  pgm-disk-origin.h  pgm-disk.h
indexes/film/: data.h  film.h  filmadalru.h  filmadastorage.h  pwlf.h  readme.txt
indexes/hybrid/: hybrid_index.h
indexes/hybrid/dynamic/: alex.h  btree.h  dynamic_base.h  pgm.h
indexes/hybrid/dynamic/btree/: btree_map.h  btree_multimap.h
indexes/hybrid/static/: cpr_di.h  leco-page.h  pgm.h  rs.h  static_base.h
indexes/hybrid/static/pgm/: pgm_index.hpp  pgm_index_dynamic.hpp  pgm_index_variants.hpp
indexes/hybrid/static/rs/: radix_spline.h
indexes/multi_threaded_hybrid/: hybrid_index.h
indexes/multi_threaded_hybrid/dynamic/: btree.h  dynamic_base.h
indexes/multi_threaded_hybrid/dynamic/btree/: BTreeOLC.h  BTreeOLC_child_layout.h
indexes/multi_threaded_hybrid/static/: cpr_di.h  leco-page.h  static_base.h
indexes/rs-disk/: builder-disk-oriented.h  builder.h  radix_spline.h
libraries/LeCo/: .gitignore  CMakeLists.txt  README.md
libraries/LeCo/experiments/: leco_int_template.cpp
libraries/LeCo/headers/: FOR.h  FOR_my.h  bit_read.h  codecfactory.h  common.h  piecewise_cost_merge_integer_template_link.h  piecewise_cost_merge_integer_template_test.h  piecewise_fix_integer_template.h
libraries/LeCo/headers/string/: leco_string.h
libraries/UpdatableLearnedIndexDisk/ALEX/: alex.h  alex_base.h  alex_fanout_tree.h  alex_map.h  alex_multimap.h  alex_nodes.h  storage_management.h  storage_management_direct_io.h
libraries/UpdatableLearnedIndexDisk/B+Tree/: b_tree.h  bitset.h  mt_b_tree.h  mt_b_tree_test.cpp  mt_storage.h  storage_management_direct_io.h  zonemap_speed_test.cpp
libraries/UpdatableLearnedIndexDisk/B+Tree/stx-btree-0.9/include/stx/: btree.h  btree_multimap.h
libraries/UpdatableLearnedIndexDisk/PGM/pgm/: pgm_index.hpp  pgm_index_dynamic.hpp  pgm_index_dynamic_origin.hpp  piecewise_linear_model.hpp  storage_utility.hpp  storage_utility_direct_io.hpp
scripts/: PG_SameItems.sh  PG_Space.sh  bottleneck.sh  build_benchmark.sh  compression.sh  disk_oriented.sh  execute_baseline.sh  execute_hybrid.sh  execute_hybrid_balance.sh  execute_hybrid_cc_curve.sh  execute_memory_budget.sh  execute_rw_tradeoff.sh  execute_update_support.sh  fetch_strategy.sh  params_aa  params_c  params_cc  prepare_ycsb.sh  test_disk.sh
scripts/multi_threaded/: execute_baseline.sh  execute_hybrid.sh
utils/: benchmark.h  macro.h  util_lid.h  util_search.h
ycsb_utils/: benchmark.h  macro.h  multi_threaded_benchmark.h  structures.h  util_search.h
